--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "AntiFastFood",
+  "name": "sideBarApp",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.11"
