--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <activity
             android:name=".SuggestionActivity"
-            android:label="@string/app_name" >
+            android:label="@string/suggestions_title" >
         </activity>
 
         <!--<activity-->
